# otp

./: LICENSE  PRIVACY.md  README.md  RFC.md
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  rust.yml
dart/: CHANGELOG.md  README.md  pubspec.yaml
dart/example/: README.md  pubspec.yaml
dart/lib/: ootp.dart
dart/lib/src/: hotp.dart  totp.dart
design/: ootp.xd
examples/: dart-console-example  rust-example
examples/node/: demo.ts  main.ts  package-lock.json  package.json
examples/node-typescript-example/: main.ts  package-lock.json  package.json
examples/rust-example/: Cargo.toml
examples/rust-example/src/: main.rs
hotp/: CHANGELOG.md  README.md  pubspec.yaml
hotp/example/: hotp_example.dart
hotp/lib/: hotp.dart
hotp/test/: hotp_test.dart
open-authenticator/: README.md  pubspec.yaml
open-authenticator/android/app/: build.gradle
open-authenticator/android/app/src/debug/: AndroidManifest.xml
open-authenticator/android/app/src/main/: AndroidManifest.xml
open-authenticator/ios/Runner/: Info.plist
open-authenticator/ios/Runner.xcodeproj/: project.pbxproj
open-authenticator/ios/Runner/Base.lproj/: Main.storyboard
open-authenticator/lib/: app.dart  hive.dart  main.dart
open-authenticator/lib/entities/: account.entity.dart  account.entity.g.dart  origin.entity.dart  origin.entity.g.dart
open-authenticator/lib/home/: home.screen.dart
open-authenticator/lib/home/widgets/: account.card.dart  help.dart  origin.card.dart  progress-timer.indicator.dart
open-authenticator/test/: widget_test.dart
rust/: Cargo.toml  README.md
rust/benches/: hotp_bench.rs  totp_bench.rs
rust/ootp/: Cargo.toml
rust/ootp-example/: Cargo.toml
rust/ootp-example/src/: main.rs
rust/ootp/src/: hotp.rs  totp.rs
rust/src/: constants.rs  hotp.rs  lib.rs  main.rs  totp.rs
totp/: CHANGELOG.md  README.md  pubspec.yaml
totp/example/: totp_example.dart
totp/lib/: totp.dart
totp/test/: totp_test.dart
typescript/: README.md  package-lock.json  package.json  tsconfig.json
typescript/src/: htop.ts  notp.ts  totp.ts
(+4 files in other folders)
