[package]
name = "ootp"
version = "0.0.6"
edition = "2018"
authors = ["Byte, Inc. <service@bytegem.net>"]
description = "OOTP (Open One-time Password) is a supports multiple programming languages. The generated one-time passwords are fully compliant with HOTP (HMAC-based One-time Password) and TOTP (Time-based One-time Password). 🚀It's easy to use!"
homepage = "https://github.com/bytegem/ootp"
repository = "https://github.com/bytegem/ootp"
license = "MIT"
keywords = ["ootp", "totp", "hotp", "rust", "rfc6238"]
readme = "README.md"
include = ["src/**/*", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hmac-sha1 = {git = "https://github.com/lrazovic/rust-hmac-sha1"}

[dev-dependencies]
hex = "0.4"
base32 = "^0.4.0"
criterion = "0.3"

[[bench]]
name = "hotp_bench"
harness = false

[[bench]]
name = "totp_bench"
harness = false