[package]
name = "ootp"
version = "0.1.0"
edition = "2018"
authors = ["Odroe, Inc. <hello@odroe.com>", "Leonardo Razovic <leorazzo@gmail.com>", "Seven Du <shiweidu@outlook.com>"]
description = "OOTP (Open One-time Password) is a supports multiple programming languages. The generated one-time passwords are fully compliant with HOTP (HMAC-based One-time Password) and TOTP (Time-based One-time Password). 🚀It's easy to use!"
homepage = "https://github.com/odroe/ootp"
repository = "https://github.com/odroe/ootp"
documentation = "https://docs.rs/ootp"
license = "MIT"
keywords = ["ootp", "totp", "hotp", "rust", "rfc6238"]
readme = "README.md"
include = ["src/**/*", "LICENSE", "README.md"]
categories = ["cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hmac-sha = "0.5"

[dev-dependencies]
hex = "0.4"
base32 = "^0.4.0"
criterion = "0.3"

[[bench]]
name = "hotp_bench"
path = "benches/hotp_bench.rs"
harness = false

[[bench]]
name = "totp_bench"
path = "benches/totp_bench.rs"
harness = false
